pruebaFinal/force-app/main/default/objects/Product2/fields/Beneficios_principales__c.field-meta.xml
<CustomField>
    <fullName>Beneficios_principales__c</fullName>
    <description>Texto consolidado de todos los registros de Benefit__c de tipo &quot;Beneficio&quot; que coinciden en Marca y Segmento.</description>
    <label>Beneficios principales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>