pruebaFinal/force-app/main/default/objects/Product2/fields/Is_System_Update__c.field-meta.xml
<CustomField>
    <fullName>Is_System_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is System Update</label>
    <type>Checkbox</type>
</CustomField>