pruebaFinal/force-app/main/default/objects/Product2/fields/Linea_de_Credito_Maxima__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_Credito_Maxima__c</fullName>
    <description>Valor máximo del saldo disponible que el banco pone a disposición en la tarjeta</description>
    <inlineHelpText>Saldo máximo en la tarjeta</inlineHelpText>
    <label>Línea de Crédito Máxima</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>