pruebaFinal/force-app/main/default/objects/Product2/fields/Linea_de_Credito_Minima__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_Credito_Minima__c</fullName>
    <description>Valor mínimo del saldo disponible en la tarjeta</description>
    <inlineHelpText>Valor mínimo del saldo disponible en la tarjeta</inlineHelpText>
    <label>Línea de Crédito Mínima</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>