pruebaFinal/force-app/main/default/objects/Product2/fields/Llave_Unica_Producto_Activo__c.field-meta.xml
<CustomField>
    <fullName>Llave_Unica_Producto_Activo__c</fullName>
    <externalId>true</externalId>
    <label>Llave Unica Producto Activo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>