pruebaFinal/force-app/main/default/objects/Product2/fields/Membresia_Anual__c.field-meta.xml
<CustomField>
    <fullName>Membresia_Anual__c</fullName>
    <label>Membresía Anual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>