pruebaFinal/force-app/main/default/objects/Product2/fields/Promociones_asociadas__c.field-meta.xml
<CustomField>
    <fullName>Promociones_asociadas__c</fullName>
    <description>Texto de campañas o beneficios adicionales vigentes</description>
    <label>Promociones asociadas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>