pruebaFinal/force-app/main/default/objects/Product2/fields/Requisitos_Minimos__c.field-meta.xml
<CustomField>
    <fullName>Requisitos_Minimos__c</fullName>
    <label>Requisitos Mínimos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>