pruebaFinal/force-app/main/default/objects/Product2/fields/Tasa_de_Interes__c.field-meta.xml
<CustomField>
    <fullName>Tasa_de_Interes__c</fullName>
    <label>Tasa de Interés</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>