pruebaFinal/force-app/main/default/objects/Product2/fields/Tipo_de_Tarjeta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Tarjeta__c</fullName>
    <description>Marca del producto solicitado. Valores: Visa, Mastercard, Amex.</description>
    <inlineHelpText>Marca de la tarjeta</inlineHelpText>
    <label>Tipo de Tarjeta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tipoDeTarjeta</valueSetName>
    </valueSet>
</CustomField>